add certifiable field wrapper type
