# core/src/main/java/it/pagopa/pdv/user_registry/core/model/User.java
@@ -1,8 +1,10 @@
 package it.pagopa.pdv.user_registry.core.model;
 
+import it.pagopa.pdv.user_registry.connector.model.CertifiableField;
 import it.pagopa.pdv.user_registry.connector.model.WorkContactResource;
 import lombok.Data;
 
+import java.time.LocalDate;
 import java.util.Map;
 
 @Data
@@ -10,9 +12,10 @@ public class User {
 
     private String id;
     private String fiscalCode;
-    private String givenName;
-    private String familyName;
+    private CertifiableField<String> name;
+    private CertifiableField<String> familyName;
+    private CertifiableField<String> email;
+    private CertifiableField<LocalDate> birthDate;
     private Map<String, WorkContactResource> workContacts;
-    //TODO certification field
 
 }
